Fixed issue with images overlapping navbar when scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
     position: sticky;
     overflow: hidden;
     top: 0;
+    z-index: 1;
 }
 
 .logo {
